<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rollr</string>
    <string name="action_settings">Settings</string>
    <string name="buttonQuick">Quick Roll</string>
    <string name="buttonGame">My Games</string>
    <string name="titleTextView">Rollr</string>
    <string name="title_activity_quick_main">Quick Rollr</string>
    <string name="buttonTextD2">d2</string>
    <string name="buttonTextD4">D4</string>
    <string name="buttonTextD6">D6</string>
    <string name="buttonTextD10">D10</string>
    <string name="buttonTextD12">D12</string>
    <string name="buttonTextD20">D20</string>
    <string name="textViewQuickRoll">Pick a Die</string>
    <string name="textAddRoll">Roll Name:</string>
    <string name="textButtonMainMenu">Main Menu</string>
    <string name="textButtonMainAdd">Add</string>
    <string name="title_activity_quick_roll_result">Roll Result</string>
    <string name="quickRollResultValue">Test</string>
    <string name="buttonReroll">Roll Again</string>
    <string name="buttonBack">Back</string>
    <string name="title_activity_game_list">Game List</string>
    <string name="addgame">Add Game</string>
    <string name="addRoll">Add Roll</string>
    <string name="gamesBack">Back</string>
    <string name="title_activity_add_game">Add Game</string>
    <string name="buttonSettings">Settings</string>
    <string name="title_activity_roll_list">RollList</string>
    <string name="title_activity_new_roll">NewRoll</string>
    <string name="textd2">0</string>
    <string name="textd4">0</string>
    <string name="textd6">0</string>
    <string name="textd10">0</string>
    <string name="textd12">0</string>
    <string name="textd20">0</string>
    <string name="ButtonPlus">+</string>
    <string name="ButtonMinus">-</string>
    <string name="title_activity_custom_roll_result">Roll Result</string>
    <string name="hello_world">Hello world!</string>

</resources>
