<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.zeroscifer.rollr.NewRoll">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTextD2"
        android:id="@+id/buttonD2"
        android:src="@drawable/d2"
        android:background="@null"
        android:onClick="onClickMain"
        android:nestedScrollingEnabled="true"
        android:layout_marginBottom="80dp"
        android:layout_above="@+id/buttonD20"
        android:layout_toLeftOf="@+id/buttonBack"
        android:layout_toStartOf="@+id/buttonBack"
        android:layout_marginRight="37dp"
        android:layout_marginEnd="37dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTextD4"
        android:id="@+id/buttonD4"
        android:src="@drawable/d4"
        android:background="@null"
        android:onClick="onClickMain"
        android:layout_alignTop="@+id/buttonD2"
        android:layout_alignLeft="@+id/buttonD12"
        android:layout_alignStart="@+id/buttonD12" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTextD6"
        android:id="@+id/buttonD6"
        android:src="@drawable/d6"
        android:background="@null"
        android:onClick="onClickMain"
        android:layout_alignBottom="@+id/buttonD4"
        android:layout_alignRight="@+id/buttonD20"
        android:layout_alignEnd="@+id/buttonD20" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTextD12"
        android:id="@+id/buttonD12"
        android:src="@drawable/d12"
        android:background="@null"
        android:layout_marginBottom="100dp"
        android:onClick="onClickMain"
        android:layout_above="@+id/buttonBack"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textAddRoll"
        android:id="@+id/textViewQuickRoll"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:textSize="55sp"
        android:textColor="#ffffffff"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBack"
        android:onClick="back"
        android:singleLine="true"
        android:text="@string/textButtonMainMenu"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:width="100sp"
        android:textSize="15sp"
        android:src="@drawable/mainmenu"
        android:background="@null"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonD20"
        android:src="@drawable/d20"
        android:background="@null"
        android:onClick="onClickMain"
        android:layout_alignBottom="@+id/buttonD12"
        android:layout_toRightOf="@+id/buttonBack"
        android:layout_toEndOf="@+id/buttonBack"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonD10"
        android:src="@drawable/d10b"
        android:background="@null"
        android:layout_alignTop="@+id/buttonD12"
        android:layout_alignRight="@+id/buttonD2"
        android:layout_alignEnd="@+id/buttonD2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textd4"
        android:id="@+id/textD4"
        android:layout_below="@+id/buttonD4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textd2"
        android:id="@+id/textD2"
        android:layout_alignBottom="@+id/textD4"
        android:layout_alignLeft="@+id/buttonD2"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textd6"
        android:id="@+id/textD6"
        android:layout_alignBottom="@+id/textD4"
        android:layout_alignRight="@+id/buttonD6"
        android:layout_marginRight="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textd12"
        android:id="@+id/textD12"
        android:layout_alignBottom="@+id/buttonD12"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textd20"
        android:id="@+id/textD20"
        android:layout_alignBottom="@+id/textD12"
        android:layout_alignRight="@+id/buttonD20"
        android:layout_marginRight="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textd9"
        android:id="@+id/textD9"
        android:layout_alignBottom="@+id/textD12"
        android:layout_alignLeft="@+id/buttonD10"
        android:layout_marginLeft="15dp"/>

</RelativeLayout>
